# leetgit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
extension/: PRIVACY.md  PUBLISHING.md  STORE_LISTING.md  background.js  content.js  inject.js  manifest.json  popup.css  popup.html  popup.js
extension/icons/: generate_icons.py  preview_variants.py
extension/lib/: format.js  github.js  leetcode.js  stats.js
scripts/: package-extension.sh
src/leetgit/: __init__.py  cli.py  config.py  formatter.py  github_sync.py  leetcode.py  service.py  stats.py
tests/: test_formatter.py  test_github_sync.py  test_leetcode.py  test_service.py  test_stats.py
